// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`chopTreeIntoTable returns expanded rows in a tree 1`] = `
[
  {
    "cells": [
      {
        "props": {
          "colSpan": 1,
        },
        "title": <strong>
          1st Branch
        </strong>,
      },
    ],
    "isTreeBranch": true,
    "itemId": "1st-branch",
    "props": {
      "aria-level": 1,
      "aria-setsize": 2,
      "isExpanded": false,
    },
  },
  {
    "cells": [
      {
        "props": {
          "colSpan": 1,
        },
        "title": <strong>
          2nd Branch
        </strong>,
      },
    ],
    "isTreeBranch": true,
    "itemId": "2nd-branch",
    "props": {
      "aria-level": 1,
      "aria-setsize": 2,
      "isExpanded": false,
    },
  },
  {
    "cells": [
      {
        "title": "TEST ITEM #7",
      },
    ],
    "itemId": "item-7",
    "props": {},
  },
  {
    "cells": [
      {
        "props": {
          "colSpan": 1,
        },
        "title": <strong>
          4th Branch
        </strong>,
      },
    ],
    "isTreeBranch": true,
    "itemId": "4th-branch",
    "props": {
      "aria-level": 1,
      "aria-setsize": 1,
      "isExpanded": false,
    },
  },
]
`;

exports[`chopTreeIntoTable returns rows in a tree 1`] = `
[
  {
    "cells": [
      {
        "props": {
          "colSpan": 1,
        },
        "title": <strong>
          1st Branch
        </strong>,
      },
    ],
    "isTreeBranch": true,
    "itemId": "1st-branch",
    "props": {
      "aria-level": 1,
      "aria-setsize": 2,
      "isExpanded": false,
    },
  },
  {
    "cells": [
      {
        "props": {
          "colSpan": 1,
        },
        "title": <strong>
          2nd Branch
        </strong>,
      },
    ],
    "isTreeBranch": true,
    "itemId": "2nd-branch",
    "props": {
      "aria-level": 1,
      "aria-setsize": 2,
      "isExpanded": false,
    },
  },
  {
    "cells": [
      {
        "title": "TEST ITEM #7",
      },
    ],
    "itemId": "item-7",
    "props": {},
  },
  {
    "cells": [
      {
        "props": {
          "colSpan": 1,
        },
        "title": <strong>
          4th Branch
        </strong>,
      },
    ],
    "isTreeBranch": true,
    "itemId": "4th-branch",
    "props": {
      "aria-level": 1,
      "aria-setsize": 1,
      "isExpanded": false,
    },
  },
]
`;

exports[`collectLeaves returns leaves of a specific branch 1`] = `
[
  "item-2",
  "item-3",
]
`;

exports[`collectLeaves returns leaves of a specific branch 2`] = `
[
  "item-4",
  "item-5",
  "item-6",
]
`;

exports[`collectLeaves returns leaves of a specific branch 3`] = `
[
  "item-4",
]
`;

exports[`collectLeaves returns leaves of a specific branch 4`] = `
[
  "item-5",
  "item-6",
]
`;

exports[`collectLeaves returns leaves of a specific branch 5`] = `[]`;

exports[`collectLeaves returns leaves of all branches 1`] = `
[
  "item-1",
  "item-2",
  "item-3",
  "item-4",
  "item-5",
  "item-6",
  "item-8",
]
`;
